--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <thead>
                 <tr bgcolor="#FFB6C1">
                     <th style="padding-top: 10px; padding-bottom: 10px">
-                        <img style="width: 500px; height: auto; max-width: 100%; border: 0;" src="./imagens/logo.png" alt="Blog Leituras"
+                        <img style="width: 500px; height: auto; max-width: 100%; border: 0;" src="https://imagens-email-tan.vercel.app/imagens/logo.png" alt="Blog Leituras"
                             style="display: block;">
                     </th>
                 </tr>
@@ -118,12 +118,12 @@
                             <b>Siga-nos nas redes sociais:</b>
                         </p>
                         <a href="#" style="margin-right: 8px;"><img
-                                src="./imagens/facebook.png" alt="Facebook" width="24"
+                                src="https://imagens-email-tan.vercel.app/imagens/facebook.png" alt="Facebook" width="24"
                                 height="24" style="width: 24px; height: 24px;"></a>
                         <a href="#" style="margin-right: 8px;"><img
-                                src="./imagens/instagram.png" alt="Instagram" width="24"
+                                src="https://imagens-email-tan.vercel.app/imagens/instagram.png" alt="Instagram" width="24"
                                 height="24" style="width: 24px; height: 24px;"></a>
-                        <a href="#"><img src="./imagens/youtube.png" alt="YouTube"
+                        <a href="#"><img src="https://imagens-email-tan.vercel.app/imagens/youtube.png" alt="YouTube"
                                 width="24" height="24" style="width: 24px; height: 24px;"></a>
                     </td>
                 </tr>
